--- a/contact.html
+++ b/contact.html
@@ -30,8 +30,11 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html" class="active">Contact</a></li>
           <li id="lg-bag">
-            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+            <a href="cart.html"
+              ><i class="far fa-shopping-bag cart-icon"></i
+            ></a>
           </li>
+          <div id="count-container"><span id="cart-item-count"></span></div>
           <a href="#" id="close"><i class="far fa-times"></i></a>
         </ul>
       </div>
@@ -199,6 +202,6 @@
       </div>
     </footer>
 
-    <script src="script.js"></script>
+    <script src="products.js"></script>
   </body>
 </html>
