--- a/shop.html
+++ b/shop.html
@@ -30,8 +30,11 @@
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
           <li id="lg-bag">
-            <a href="cart.html"><i class="far fa-shopping-bag"></i></a>
+            <a href="cart.html"
+              ><i class="far fa-shopping-bag cart-icon"></i
+            ></a>
           </li>
+          <div id="count-container"><span id="cart-item-count"></span></div>
           <a href="#" id="close"><i class="far fa-times"></i></a>
         </ul>
       </div>
