--- a/cart.html
+++ b/cart.html
@@ -62,7 +62,7 @@
             <th>Subtotal</th>
           </tr>
         </thead>
-        <tbody>
+        <tbody id="all-cart-items">
           <tr>
             <td>
               <a href="#"><i class="far fa-times-circle"></i></a>
@@ -105,24 +105,7 @@
           <button class="normal">Apply</button>
         </div>
       </div>
-      <div id="subtotal">
-        <h3>Cart Totals</h3>
-        <table>
-          <tr>
-            <td>Cart Subtotal</td>
-            <td>$335</td>
-          </tr>
-          <tr>
-            <td>Shipping</td>
-            <td>Free</td>
-          </tr>
-          <tr>
-            <td><strong>Total</strong></td>
-            <td><strong>$335</strong></td>
-          </tr>
-        </table>
-        <button class="normal">Proceed to checkout</button>
-      </div>
+      <div id="subtotal"></div>
     </section>
 
     <footer class="section-p1">
