--- a/cart.html
+++ b/cart.html
@@ -62,38 +62,7 @@
             <th>Subtotal</th>
           </tr>
         </thead>
-        <tbody id="all-cart-items">
-          <tr>
-            <td>
-              <a href="#"><i class="far fa-times-circle"></i></a>
-            </td>
-            <td><img src="img/products/f1.jpg" /></td>
-            <td>Cartoon Astronaut T-Shirts</td>
-            <td>$118.19</td>
-            <td><input type="number" value="1" /></td>
-            <td>$118.19</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="#"><i class="far fa-times-circle"></i></a>
-            </td>
-            <td><img src="img/products/f1.jpg" /></td>
-            <td>Cartoon Astronaut T-Shirts</td>
-            <td>$118.19</td>
-            <td><input type="number" value="1" /></td>
-            <td>$118.19</td>
-          </tr>
-          <tr>
-            <td>
-              <a href="#"><i class="far fa-times-circle"></i></a>
-            </td>
-            <td><img src="img/products/f1.jpg" /></td>
-            <td>Cartoon Astronaut T-Shirts</td>
-            <td>$118.19</td>
-            <td><input type="number" value="1" /></td>
-            <td>$118.19</td>
-          </tr>
-        </tbody>
+        <tbody id="all-cart-items"></tbody>
       </table>
     </section>
 
